@@ -5,7 +5,7 @@ BUILDING DDS
 * Supported platform:
 
   We have built DDS examples on Win32 using Visual Studio .NET 2003 (VC 7.1)
-  and Visual Studio 2005 (VC 8), as well as gcc 3.3 on Solaris/x86 and gcc 3.4,
+  and Visual Studio 2005 (VC 8), as well as gcc 3.3 on Solaris/x86, and gcc 3.4
   and 4.x on Linux.
 
 * Compiling:
@@ -45,6 +45,17 @@ BUILDING DDS
       cd %DDS_ROOT%
       perl %ACE_ROOT%\bin\mwc.pl -type [InsertCompilerType] DDS.mwc
         "CompilerTypes" tested include vc71, vc8, and nmake
+
+     Note: If you are using one of the following versions of TAO
+        OCI TAO 1.4a_p15 or earlier
+        OCI TAO 1.5a_p0
+        DOC group 1.5.7 or earlier
+     You will need to add the following arguments to mwc.pl:
+        Unix:
+                -include $DDS_ROOT/MPC/config-legacy
+        Windows:
+                -include %DDS_ROOT%\MPC\config-legacy
+
 
   4 Build
 
